add proxy to fix cors issue

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "kaamelot-react-ts-tld-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://kaamelott.chaudie.re/api",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,9 @@
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -22,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start:backend": "node index.js"
   },
   "eslintConfig": {
     "extends": [
