--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "start:backend": "node index.js"
+    "serverStart": "node server.js"
   },
   "eslintConfig": {
     "extends": [
